[package]
name = "dumpling"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "dumpling"
path = "src/lib.rs"

[[bin]]
name = "dumpling"
path = "src/bin.rs"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive", "full"] }
hex = { version = "0.4", default-features = false }
comfy-table = "0.1.1"
clap = { version = "~2.33", features = ["yaml"] }
rustyline = "6.2.0"
shellwords = "1.0.0"
chrono = "0.4"

[dependencies.substrate-api-client]
git = "https://github.com/whalelephant/substrate-api-client"
branch = "map_without_default"

[dependencies.sp-core]
version = '2.0.0-alpha.7'
package = "sp-core"
default-features = false
features = ["full_crypto"]

[dependencies.sp-runtime]
version = '2.0.0-alpha.7'
package = "sp-runtime"
default-features = false

[dependencies.sp-staking]
version = '2.0.0-alpha.7'
package = "sp-staking"
default-features = false

[dependencies.staking]
version = '2.0.0-alpha.7'
package = "pallet-staking"
default-features=false

[dependencies.balances]
version = '2.0.0-alpha.7'
package = "pallet-balances"
default-features=false

[dependencies.polkadot-primitives]
package = "polkadot-primitives"
version = "0.8.2"
git = "https://github.com/paritytech/polkadot"

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-runtime/std",
	"sp-staking/std",
	"codec/std",
    "staking/std",
]
